// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchoolPopupContent renders correctly with props 1`] = `
<div class="popup-info container">
  <p class="school-name">
    school
    <br>
    <small>Government, Primary - 03 9999 8888</small>
  </p>
  <p>Primary ratings</p>
  <dl class="school-stats">
    <dt class="label">Overall rating</dt>
    <dd class="value">
      <em>95</em>
    </dd>
    <dt class="label">English rating</dt>
    <dd class="value">
      <em>4</em>
    </dd>
    <dt class="label">Maths rating</dt>
    <dd class="value">
      <em>4</em>
    </dd>
    <dt class="label">Enrolments</dt>
    <dd class="value">
      <em>500</em>
    </dd>
  </dl>
  <!---->
  <!---->
</div>
`;

exports[`SchoolPopupContent renders correctly with props and secondary school 1`] = `
<div class="popup-info container">
  <p class="school-name">
    school
    <br>
    <small>Government, Pri/Sec - 03 9999 8888</small>
  </p>
  <p>Primary ratings</p>
  <dl class="school-stats">
    <dt class="label">Overall rating</dt>
    <dd class="value">
      <em>95</em>
    </dd>
    <dt class="label">English rating</dt>
    <dd class="value">
      <em>4</em>
    </dd>
    <dt class="label">Maths rating</dt>
    <dd class="value">
      <em>4</em>
    </dd>
    <dt class="label">Enrolments</dt>
    <dd class="value">
      <em>500</em>
    </dd>
  </dl>
  <p>Secondary ratings</p>
  <dl class="school-stats">
    <dt class="label">Overall rating</dt>
    <dd class="value">
      <em>96</em>
    </dd>
    <dt class="label">English rating</dt>
    <dd class="value">
      <em>3</em>
    </dd>
    <dt class="label">Maths rating</dt>
    <dd class="value">
      <em>4</em>
    </dd>
    <dt class="label">Enrolments</dt>
    <dd class="value">
      <em>200</em>
    </dd>
  </dl>
</div>
`;

exports[`SchoolPopupContent renders correctly with props and secondary school only 1`] = `
<div class="popup-info container">
  <p class="school-name">
    school
    <br>
    <small>Independent, Secondary - 03 9999 8888</small>
  </p>
  <!---->
  <!---->
  <p>Secondary ratings</p>
  <dl class="school-stats">
    <dt class="label">Overall rating</dt>
    <dd class="value">
      <em>96</em>
    </dd>
    <dt class="label">English rating</dt>
    <dd class="value">
      <em>3</em>
    </dd>
    <dt class="label">Maths rating</dt>
    <dd class="value">
      <em>4</em>
    </dd>
    <dt class="label">Enrolments</dt>
    <dd class="value">
      <em>200</em>
    </dd>
  </dl>
</div>
`;
